# An-lise-Automatizada-de-Documentos-com-Azure-AI-e-Machine-Learning

./: .env.example  .gitignore  Análise_Automatizada_de_Documentos_com_Azure_AI_e_Machine_Learning_para_Detecção_de_Fraudes.ipynb  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: .gitkeep
docs/: api-reference.md  architecture.md  faq.md  index.md  installation.md  usage.md
examples/: __init__.py  advanced_usage.py  basic_usage.py
logs/: .gitkeep
models/: .gitkeep
output/: .gitkeep
src/: __init__.py  cli.py  config.py  detector.py  document_analyzer.py  logger.py  qr_verifier.py
tests/: __init__.py  conftest.py  test_detector.py  test_logger.py
